Event.applyAtPath was not handling correctly the context case, improved the tests.